// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component Should concat classname in props with Bulma classname 1`] = `
<table
  className="table other-class this-is-a-test is-fullwidth is-striped"
>
  <p>
    Default
  </p>
</table>
`;

exports[`Table component Should exist 1`] = `[Function]`;

exports[`Table component Should have table classname 1`] = `
<table
  className="table is-fullwidth is-striped"
>
  Test 
  <a
    href="test"
  >
    Give me
  </a>
</table>
`;

exports[`Table component Should use inline styles 1`] = `
<table
  className="table is-fullwidth is-striped"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</table>
`;
